# rust_server

./: Cargo.toml
src/: main.rs
src/db/: mongodb.rs
src/handlers/: book_handler.rs  mod.rs
src/models/: book.rs
src/services/: s3_service.rs
