[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
mongodb = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-s3 = { version = "0.9", features = ["rustls"] }
dotenv = "0.15"
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }  # Enable "serde" feature



thiserror = "1.0"
